# map-of-research

./: .gitignore  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements-collector.txt  requirements-dev.txt  requirements-publisher.txt  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: annual-roster-review.yml  ci.yml  collect.yml  update.yml  upload.yml
data/: README.md  collection-state.json
data/authors/: -syEyyAAAAAJ.json  -x16PXsAAAAJ.json  0B3gfuoAAAAJ.json  0LqbCKAAAAAJ.json  0P7IAs8AAAAJ.json  0P9w_S0AAAAJ.json  0bg-uVgAAAAJ.json  0oI3MWkAAAAJ.json  1LyndUsAAAAJ.json  1mNkJwgAAAAJ.json  2BTuWpgAAAAJ.json  2u09mlAAAAAJ.json  32ZyPkEAAAAJ.json  3W2VK5sAAAAJ.json  4PU5ZFYV-iEC.json  4iYpwt8AAAAJ.json  55B-xqUAAAAJ.json  5EewAB0AAAAJ.json  5V852JcAAAAJ.json  (+198 more)
docs/: dataset-schema.md
map_of_research/: __init__.py  collector.py  dataset.py  io.py  keywords.py  publisher.py  quality.py  registry.py  roster_review.py  snapshot.py  topic_labels.py
registry/: README.md  departments.csv  faculty.csv  maps.csv  memberships.csv  people.csv
scripts/: build_registry_from_legacy.py  install_thin_site.py  migrate_legacy_cache.py
site/: README.template.md  SECURITY.md  index.html  map-config.example.json
snapshots/: README.md  cmu-engineering-publications.parquet.manifest.json
status/: README.md  authors.json  last-collection.json  last-upload.json
tests/: registry_helpers.py  test_collector.py  test_dataset.py  test_io.py  test_keywords.py  test_legacy_migration.py  test_publisher.py  test_quality.py  test_registry.py  test_roster_review.py  test_snapshot.py
(+5 files in other folders)
